--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "isholiday"
+description = "check is holiday for iranian"
+homepage = "https://github.com/robatipoor/isholiday"
+keywords = ["holiday", "persian","iran","date"]
+license = "MIT"
+repository = "https://github.com/robatipoor/isholiday"
 version = "0.1.0"
-authors = ["robatioor <mahdi.robatipoor@gmail.com>"]
+authors = ["Mahdi Robatipoor <Mahdi.robatipoor@gmail.com>"]
 edition = "2018"
 
 [dependencies]
